# Compressor

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md  compressor.c  compressorMock.c  compressor_core.c  compressor_core.h  first_order_lowpass.c  first_order_lowpass.h  k  system-compressor.c
compressor.lv2/: compressor.ttl  manifest.ttl
system-compressor.lv2/: manifest.ttl  modgui.ttl  system-compressor.ttl
